--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
       client:
         registration:
           google:
+            client-id:
+              client-secret:
+              scope:
+              client-authentication-method:
+              redirect-uri:
