--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,13 @@ dependencies {
 
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+	// JJWT API
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	// JJWT Implementation
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	// JJWT Jackson Integration
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 
 tasks.named('test') {
